Fundamentals of JS learning Part-1 completed

--- a/Assignments/01-Fundamentals-Part-1/starter/index.html
+++ b/Assignments/01-Fundamentals-Part-1/starter/index.html
@@ -28,9 +28,19 @@
 
 <body>
   <h1>JavaScript Fundamentals – Part 1</h1>
-  <!-- <script src="value-variables.js"> -->
-  <script src="data-types.js"></script>
-  </script>
+  <script src="value-variables.js"></script>
+  <!-- <script src="data-types.js"></script> -->
+  <!-- <script src="variable-types.js"></script> -->
+  <!-- <script src="operators.js"></script> -->
+  <!-- <script src="coding-challenge-1.js"></script> -->
+  <!-- <script src="taking-decisions.js"></script> -->
+  <!-- <script src="/01-Fundamentals-Part-1/starter/coding-challenge-2.js"></script> -->
+  <!-- <script src="/01-Fundamentals-Part-1/starter/type-conversion.js"></script> -->
+  <!-- <script src="/01-Fundamentals-Part-1/starter/eqality-operators.js"></script> -->
+  <!-- <script src="/01-Fundamentals-Part-1/starter/logical-operators.js"></script> -->
+  <!-- <script src="/01-Fundamentals-Part-1/starter/coding-challenge-3.js"></script> -->
+  <!-- <script src="/01-Fundamentals-Part-1/starter/switch-conditional.js"></script> -->
+  <!-- <script src="/01-Fundamentals-Part-1/starter/coding-challenge-4.js"></script> -->
 </body>
 
 </html>
